--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Test-MobileAgent
 
+0.03 to be released
+  - docomo guid should be able to be empty
+
 0.02 2009/12/16
   - added docomo serial number support
   - fixed user agent detection
